hphp/test/slow/parser/hh-reserved-name-int-1.php.expectf
Fatal error: Cannot use 'Int' as class name as it is reserved in %s on line 3
